# lpm

./: .gitattributes  LICENSE  README.md  build-hpm.hl  build.hacker  build.hl  install.hacker  install.hl  remove.hl
build-hpm/: wrapper.hl
legend/: main.hk
live-build/: README.md  config
live-build/hooks/live/: 0010-lpm-init.hook.live
live-build/hooks/normal/: 0100-install-lpm.hook.chroot  0200-apt-lpm-bridge.hook.chroot  0300-system-config.hook.chroot
live-build/includes.chroot_after_packages/etc/lpm/: sources-list.toml
live-build/package-lists/: live.list.chroot
source-code/: Cargo.toml  apt_bridge.cpp  apt_wrapper.cpp  build.rs  main.odin
source-code/src/: alternatives.rs  apt_bridge.cpp  apt_bridge.h  apt_sources.rs  cache.rs  cli.rs  db.rs  deb.rs  download.rs  dpkg_status.rs  engine.rs  ffi.rs  fs_install.rs  import_dpkg.rs  installer.rs  keyring.rs  log.rs  logger.rs  main.rs  package.rs  plugins.rs  repo.rs  solver.rs  solver_sat.rs  ui.rs  utils.rs
sources-lists/forky/: sources-list.toml
sources-lists/sid/: sources-list.toml
sources-lists/trixie/: sources-list.toml
sources-lists/ubuntu/questing-quokka/: sources-list.toml
sources-lists/ubuntu/resolute-raccoon/: sources-list.toml
