[package]
name = "lpm"
version = "0.6.0"
edition = "2021"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
description = "Legendary Package Manager – standalone Debian-compatible package manager"
license = "GPL-3.0"

[[bin]]
name = "lpm"
path = "src/main.rs"

[features]
default = ["sat-solver"]
sat-solver = ["varisat"]

[dependencies]
lexopt       = "0.3"
indicatif    = { version = "0.17", features = ["rayon"] }
owo-colors   = { version = "3", features = ["supports-colors"] }
tokio        = { version = "1", features = ["full"] }
reqwest      = { version = "0.12", features = ["stream", "gzip", "deflate"] }
anyhow       = "1"
thiserror    = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
flate2       = "1"
bzip2        = "0.4"
xz2          = "0.1"
zstd         = "0.13"
tar          = "0.4"
futures-util = "0.3"
sha2         = "0.10"
md-5         = "0.10"
hex          = "0.4"
bytesize     = "1"
terminal_size = "0.3"
tempfile     = "3"
chrono       = { version = "0.4", features = ["serde", "clock"] }
regex        = "1"
once_cell    = "1"
rusqlite     = { version = "0.31", features = ["bundled"] }
glob         = "0.3"
libc         = "0.2"
varisat      = { version = "0.2", optional = true }

[profile.release]
opt-level    = 3
lto          = true
codegen-units = 1
strip        = true
